# diet_code

./: .gitignore  Dockerfile  ITSArch.drawio  Minutes_Of_Meeting  README.md  docker-compose.yaml
its-be/: Dockerfile  README.adoc  check_quiz.py  config.toml  docker-compose.yaml  evaluation.ipynb  generate_notes.py  generate_test.py  its.sqlite  lang-chain.ipynb  make_celery.py  pyproject.toml  pyrightconfig.json  scripts.ipynb  server.py  wsgi.py
its-be/be/: __init__.py  api.py  auth.py  background_tasks.py  config.toml  its.sqlite  ml.py  models.py  seed.py  stats.py  views.py
its-be/be/api/: __init__.py  course.py  courses.py  test.py  tests_api.py
its-be/be/models/: __init__.py  tutor.py  user.py
its-be/be/static/: 24-7-access.avif  chart.json  courses-display.avif  earth-science-course.avif  english-course.avif  english-course.tiff  expert-tutors.avif  interactive-quiz.avif  its.avif  math-course.avif  personalised-learning.avif  personalized-learning.avif  progress-tracking.avif  quizzes.avif  self-scheduled.avif  style.css
its-be/be/templates/: about_us.html  authBase.html  base.html  course.html  course_details.html  courses.html  dashboard.html  home.html  home_login.html  incomplete_test.html  its.html  learning.html  submit_test.html  user_home.html  user_stats.html  user_stats.html.j2  user_test.html
its-be/chat with pdfs/: app.py  htmlTemplates1.py  requirements.txt
its-be/launchers/: debug-app.sh  start-app.sh
its-be/models/: __init__.py  tutor.py  user.py
its-be/seed/: courses_list.json  geography.json  maths.json  physics.json
(+150 files in other folders)
