[project]
name = "its"
version = "1.0.0"
description = "Intelligent Tutoring System"
dependencies = [
  "flask",
  "flask-login",
  "pony",
  "pymysql",
  "cryptography",
  "langchain[all]",
  "openai",
  "numpy",
  "pandas"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
