[project]
name = "its"
version = "1.0.0"
description = "Intelligent Tutoring System"
dependencies = [
  "gunicorn",
  "flask",
  "flask-login",
  "pony",
  "pymysql",
  "cryptography",
  "langchain",
  "tiktoken",
  "openai",
  "numpy",
  "pandas",
  "celery",
  "celery-redbeat",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
